--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,36 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-}
-
 group 'com.pluhin.infra'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+    }
+}
+
+apply plugin: 'kotlin'
+apply plugin: "kotlin-spring"
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-webflux"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile 'org.liquibase:liquibase-core:3.4.1'
+    compile 'com.zaxxer:HikariCP:3.2.0'
+    compile 'mysql:mysql-connector-java:5.1.47'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
