--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,11 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-jdbc"
     compile "org.springframework.boot:spring-boot-starter-webflux"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile 'org.liquibase:liquibase-core:3.4.1'
-    compile 'com.zaxxer:HikariCP:3.2.0'
+
+    compile "org.liquibase:liquibase-core" 
+    
     compile 'mysql:mysql-connector-java:5.1.47'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
