--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 
-spring.datasource.username=service-manager-user
+spring.datasource.username=service-management-user
 spring.datasource.password=passkey0
-spring.datasource.url=jdbc:mysql://localhost:3306/service-manager
+spring.datasource.url=jdbc:mysql://localhost:3306/service_management
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
